try to install wrangler@latest globally to resolve the error of line 1: wrangler: command not found

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         cache: "npm"
 
     - name: Install modules
-      run: npm i wrangler@latest
+      run: npm i -g wrangler@latest
 
     - name: Build
       run: npx wrangler build
