Revert "try to install wrangler@latest globally to resolve the error of line 1: wrangler: command not found"
This reverts commit ae8f616222e9e314c6b0bd81543f578c4d52da58.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         cache: "npm"
 
     - name: Install modules
-      run: npm i -g wrangler@latest
+      run: npm i wrangler@latest
 
     - name: Build
       run: npx wrangler build
